--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,2 +1,8 @@
+@import "variables";
+@import "normalize";
 @import "juiced";
+@import "typecsset";
+@import "modernizr";
+@import "mixins";
+@import "highlights";
 @import "layouts";
