--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,13 +1,15 @@
-<header class="container header-content justify-space-between">
-  <nav class="col-3">
-    <ul class="inline-list">
-        <li>{{#link-to 'about'}}About{{/link-to}}</li>
-        <li>{{#link-to 'projects'}}Projects{{/link-to}}</li>
-        <li>{{#link-to 'posts'}}Blog{{/link-to}}</li>
-    </ul>
-  </nav>
-  <div class="col-4">
-    {{#link-to 'home'}}<h3>Donald Wasserman</h3>{{/link-to}}
+<header class="header">
+  <div class="container header-content justify-space-between">
+    <nav class="col-4 align-end">
+      <ul class="inline-list">
+          <li>{{#link-to 'posts'}}Home{{/link-to}}</li>
+          <li>{{#link-to 'about'}}About{{/link-to}}</li>
+          <li>{{#link-to 'projects'}}Projects{{/link-to}}</li>
+      </ul>
+    </nav>
+    <div class="col-4 justify-end align-end">
+      {{#link-to 'home'}}<h3 class="text-right">Donald Wasserman</h3>{{/link-to}}
+    </div>
   </div>
 </header>
 <div class="main-content container justify-space-between">
