--- a/app/templates/posts/post.hbs
+++ b/app/templates/posts/post.hbs
@@ -1,12 +1,16 @@
 <div class="container">
 
   <div class="col-push-2 col-8">
-
-      <h2>{{model.title}}</h2>
-
-      {{log 'Name is:' model}}
+      <div class="img-container">
+        <img src="{{blog-img model.mainImg}}" alt="" />
+      </div>
+      <div class="page-title">
+        <span class="blog-date pill pull-right">{{model.formattedDate}}</span>
+        <h2>{{model.title}}</h2>
+      </div>
+      <p class="lead">
+        {{model.description}}
+      </p>
+      {{unescape-content model.content}}
   </div>
-
 </div>
-
-{{outlet}}
