--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -15,3 +15,15 @@
 <div class="main-content container justify-space-between">
   {{outlet}}
 </div>
+
+<footer class="footer container justify-space-between">
+<p class="footer-left">Built with <img src="{{blog-img 'cat.svg'}}"> in Michigan</p>
+<ul class="connect">
+  <li><a href="https://github.com/donaldwasserman"><span class="fa fa-github"></span> GitHub</a></li>
+  <li><a class="LinkedIn" href="http://www.linkedin.com/in/djwasserman"><span class="fa fa-linkedin"></span> LinkedIn</a></li>
+  <li><a class="Twitter" href="http://www.twitter.com/donaldwasserman"><span class="fa fa-twitter"></span> Twitter</a></li>
+  <li><a class="Instagram" href="http://instagram.com/djwasserman"><span class="fa  fa-instagram"></span> Instagram</a></li>
+  <li><a class="CodePen" href="https://http://codepen.io/donaldwasserman/"><span class="fa fa-codepen"></span> CodePen</a></li>
+</ul>
+
+</footer>
