--- a/app/styles/_highlights.scss
+++ b/app/styles/_highlights.scss
@@ -1,6 +1,6 @@
 /*
 
-Dark style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiacs.Org>
+Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-license.org/
 
 */
 
@@ -8,56 +8,74 @@ Dark style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiacs.Or
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  background: #444;
-}
-
-.hljs-keyword,
-.hljs-selector-tag,
-.hljs-literal,
-.hljs-section,
-.hljs-link {
-  color: white;
+  background: #23241f;
 }
 
 .hljs,
+.hljs-tag,
 .hljs-subst {
-  color: #ddd;
+  color: #f8f8f2;
 }
 
-.hljs-string,
-.hljs-title,
-.hljs-name,
-.hljs-type,
-.hljs-attribute,
-.hljs-symbol,
+.hljs-strong,
+.hljs-emphasis {
+  color: #a8a8a2;
+}
+
 .hljs-bullet,
-.hljs-built_in,
-.hljs-addition,
-.hljs-variable,
-.hljs-template-tag,
-.hljs-template-variable {
-  color: #d88;
-}
-
-.hljs-comment,
 .hljs-quote,
-.hljs-deletion,
-.hljs-meta {
-  color: #777;
+.hljs-number,
+.hljs-regexp,
+.hljs-literal,
+.hljs-link {
+  color: #ae81ff;
 }
 
-.hljs-keyword,
-.hljs-selector-tag,
-.hljs-literal,
+.hljs-code,
 .hljs-title,
 .hljs-section,
-.hljs-doctag,
-.hljs-type,
-.hljs-name,
+.hljs-selector-class {
+  color: #a6e22e;
+}
+
 .hljs-strong {
   font-weight: bold;
 }
 
 .hljs-emphasis {
   font-style: italic;
+}
+
+.hljs-keyword,
+.hljs-selector-tag,
+.hljs-name,
+.hljs-attr {
+  color: #f92672;
+}
+
+.hljs-symbol,
+.hljs-attribute {
+  color: #66d9ef;
+}
+
+.hljs-params,
+.hljs-class .hljs-title {
+  color: #f8f8f2;
+}
+
+.hljs-string,
+.hljs-type,
+.hljs-built_in,
+.hljs-selector-id,
+.hljs-selector-attr,
+.hljs-addition,
+.hljs-variable,
+.hljs-template-variable {
+  color: #e6db74;
+}
+
+.hljs-comment,
+.hljs-deletion,
+.hljs-meta {
+  color: #75715e;
 }
