--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -1,1 +1,8 @@
-{{outlet}}
+<div class="col-3 col-layout">
+  <h3>My Projects</h3>
+</div>
+<div class="col-9 col-layout container">
+  {{#each model as |project|}}
+    {{project-view input=project}}
+  {{/each}}
+</div>
