--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,8 +3,8 @@
     <nav class="col-4 align-end">
       <ul class="inline-list">
           <li>{{#link-to 'posts'}}Home{{/link-to}}</li>
-          <li>{{#link-to 'about'}}About{{/link-to}}</li>
           <li>{{#link-to 'projects'}}Projects{{/link-to}}</li>
+          <li>{{#link-to 'about'}}About{{/link-to}}</li>
       </ul>
     </nav>
     <div class="col-4 justify-end align-end">
@@ -17,7 +17,7 @@
 </div>
 
 <footer class="footer container justify-space-between">
-<p class="footer-left">Built with <img src="{{blog-img 'cat.svg'}}"> in Michigan</p>
+<p class="footer-left">Built with <img class="cat-logo" src="{{blog-img 'cat.svg'}}"> in Michigan</p>
 <ul class="connect">
   <li><a href="https://github.com/donaldwasserman"><span class="fa fa-github"></span> GitHub</a></li>
   <li><a class="LinkedIn" href="http://www.linkedin.com/in/djwasserman"><span class="fa fa-linkedin"></span> LinkedIn</a></li>
