--- a/app/templates/components/project-view.hbs
+++ b/app/templates/components/project-view.hbs
@@ -7,7 +7,7 @@
 </div>
 <div class="project-footer">
   <p class="">
-    <em><a href="{{input.url}}">View</a></em>
+    <strong><em><a target="_blank" href="{{input.url}}">View</a></em></strong>
   </p>
 </div>
 
