--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -37,8 +37,13 @@
           <li>Sass</li>
         </ul>
         <h3 id="how-i-built-this-website">How I built this website</h3>
-        <p>View the code for this website on <a href="https://github.com/donaldwasserman/portfolio">GitHub.</a></p>
-        <p>More details to follow.</p>
+        <p>
+          I built this website using Ember and Node/Express, using a collection of markdown files as the basis for most of the content.
+        </p>
+
+        <p>
+          The content is parsed following the Ember Data REST format using a custom NPM module that converts markdown and YML front-matter into a JSON API-ready javascript object.
+        </p>
       </div>
     </div>
   {{/if}}
