--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -1,5 +1,12 @@
 <div class="col-3 col-layout">
   <h3>My Projects</h3>
+  <p>
+    Find an overview of a few of my somewhat recent-ish projects.
+  </p>
+
+  <p>
+    If you're interested in working together on a new or existing Drupal or Ember project, let's talk!
+  </p>
 </div>
 <div class="col-9 col-layout container">
   {{#each model as |project|}}
